# logseq-cli

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  agent.md  pyproject.toml  requirements.txt
docs/: claude-skill.md  design.md  implement.md  knowledge-base.md
integrations/claude/: CLAUDE.md
integrations/claude/commands/: logseq-capture.md  logseq-daily.md  logseq-decisions.md  logseq-kb.md  logseq-lessons.md  logseq-next.md  logseq-project.md  logseq-status.md  logseq-topic.md  logseq-weekly.md
integrations/claude/skills/logseq-kb/: SKILL.md
integrations/claude/skills/logseq-kb/references/: commands.md
scripts/: install_claude_skill.sh  release.sh
src/logseq_cli/: __init__.py  __main__.py  main.py
src/logseq_cli/cli/: __init__.py  app.py
src/logseq_cli/core/: __init__.py  capture.py  cards.py  config.py  decisions.py  documents.py  errors.py  graph.py  journals.py  lessons.py  links.py  models.py  pages.py  parser.py  recall.py  search.py  stats.py  summaries.py  tasks.py
src/logseq_cli/utils/: __init__.py  output.py
tests/: conftest.py  test_cli.py
tests/fixtures/sample_graph/journals/: 2026_03_29.md
tests/fixtures/sample_graph/logseq/: config.edn
tests/fixtures/sample_graph/pages/: OpenClaw.md  gateway-health.md  project_notes.org
